--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Lounge Tagger Bot",
+  "name": "HerlockTagger Bot🇹🇷",
   "logo":"https://telegra.ph/file/dfa517fd00b6aca5f7ac9.jpg",
   "description": "Lounge tagger bot sıze ucretsız uyelerınızı etıketleyen bı bottur.",
   "env": {
